[package]
name = "einstein_db"
version = "0.1.0"
description = "Einstein DB"
license = "MIT"
author = "EinsteinDB"


[dependencies]
openssl = "0.10"
http = "0"
libc = "0.2"
slog = "2.7.0"
parking_lot = "0.12"
parking_lot_core = "0.9.10"
byteorder = "1.3"
futures = "0.3"
tokio = "1.0"
tokio-timer = "0.2"
tokio-io = "0.1"
tokio-util = "0.3"
tokio-tcp = "0.1"

[workspace]
members = [
    "einstein_db",
    "einstein_db_tests"
]